Working version for polling * Add recipe parsing * Add recipe dictionary serialization * Add README * Add emoji support * Add recipe message formatting * Add callback query logic

--- a/env.yml
+++ b/env.yml
@@ -1,7 +1,8 @@
 name: bartender
 dependencies:
 - pip
-- pyyaml
+- pyyaml==5.4
+- beautifulsoup4
 - pip:
     - python-telegram-bot
     - python-telegram-bot[socks]
